fixed alignment issue

--- a/store_theme_v1/css/main.scss
+++ b/store_theme_v1/css/main.scss
@@ -25,9 +25,9 @@ header {
         bottom: 0;
         height: 100vh;
         background: #D9D9D9;
-        transition: .5s ease-in-out;
+        transition: .3s ease-in-out;
 
-        padding: 3.5em 3.9em 0 13.2em;
+        padding: 3.5em 4.8em 0 13.2em;
         text-align: right;
         
         .close {
@@ -190,7 +190,7 @@ header {
 }
 
 footer {
-    margin-top: 17.3em;
+    margin-top: 10.8em;
     background: #1E1E1E;
     color: #fff;
     overflow: hidden;
